Updated to fix launching via Ant. Added ant target for bootstrap launch. Added parsing for web directories to prevent issues when launching with Ant from windows.
git-svn-id: http://red5.googlecode.com/svn/java/server/trunk@2850 1b6495e4-3631-0410-8e05-8f51eee8b9cc